--- a/example/.vuepress/styles/palette.styl
+++ b/example/.vuepress/styles/palette.styl
@@ -7,7 +7,7 @@
 // $borderColor = rgba(0,0,0,.05)
 // $darkBorderColor = #000
 
-// $codeBgColor = #000
+// $bgCode = #000
 
 // $bgColor = #fff
 // $headerBgColor = $bgColor;
