--- a/styles/index.styl
+++ b/styles/index.styl
@@ -1,6 +1,7 @@
 @require './font.styl'
 @require './config.styl'
 @require './code.styl'
+@require './custom-blocks'
 @require './wrapper.styl'
 @require './sw-popup.styl'
 
