--- a/styles/wrapper.styl
+++ b/styles/wrapper.styl
@@ -1,7 +1,7 @@
 $wrapper
   max-width $contentWidth
   margin 0 auto
-  background-color $bgColor
+  background-color $bg
   @media (min-width: $MQNarrow)
     padding 2rem
   @media (max-width: $MQMobileNarrow)
