cambiado color de fondo de cover

--- a/styles/palette.styl
+++ b/styles/palette.styl
@@ -18,6 +18,7 @@ $darkTextColor = $bg
 
 // Header
 $bgHeader = $bgComponents
+$bgCover = radial-gradient(circle at 50% -20.71%, #ec5033 0, #ff831a 12.5%, #ff6d2c 25%, #ff5636 37.5%, #ff692d 50%, #fc5137 62.5%, #fd5237 75%, #f7463a 87.5%, #f94a39 100%)
 
 // Footer
 $bgFooter = $bgComponents
