--- a/styles/index.styl
+++ b/styles/index.styl
@@ -3,9 +3,15 @@
 @require './custom-blocks'
 @require './wrapper.styl'
 
-html, body
-  padding 0
-  margin 0
+html 
+  box-sizing border-box
+
+*,
+*::before,
+*::after 
+  box-sizing: inherit;
+  margin: 0;
+  padding: 0;
 
 body
   font-family -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif
